Content and Balance Update

--- a/src/main/resources/assets/corkboard/lang/en_US.lang
+++ b/src/main/resources/assets/corkboard/lang/en_US.lang
@@ -13,6 +13,7 @@ item.future_sword_guard.name=Future Sword Guard
 item.future_sword_handle.name=Future Sword Handle
 item.firey_ingot.name=Nth Metal
 item.firey_sword.name=Nth Sword
+item.future_pickaxe.name=Future Pickaxe
 
 
 ##blocks
